# recipeapp

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bzlmod  docker-compose.yaml  gazelle_python.yaml  pnpm-lock.yaml  requirements.in  requirements.txt  requirements_lock.txt
app/: data_layer.py
app/cli/: BUILD.bazel  __main__.py
db/: BUILD.bazel  data_layer.py  data_layer_test.py
db/models/: recipe.py
db/postgres/: BUILD.bazel  postgres_driver.py
db/postgres/models/: BUILD.bazel  recipe.py
db/sqlite/: BUILD.bazel  client.py  test_client.py
react/: index.html  package.json
react/src/: App.tsx  BUILD.bazel  index.css  index.tsx
react/src/external_apis/: BUILD.bazel  recipe_client.tsx
react/src/routes/: BUILD.bazel  recipe.tsx  root.tsx
scripts/: script.py
server/: BUILD.bazel  flask_server.py
server/flask_server/: server.py
tools/: BUILD.bazel  lint.bzl
