module(
    name = "recipe_app",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "0.29.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    python_version = "3.12",
    is_default = True,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)

use_repo(pip, "pip")

bazel_dep(name = "rules_python_gazelle_plugin", version = "0.29.0")

bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")
