load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "db",
    srcs = [
        "data_layer.py",
    ],
    visibility = ["//:__subpackages__"],
)

py_test(
    name = "data_layer_test",
    srcs = ["data_layer_test.py"],
    deps = [
        ":db",
        "@pip//absl_py",
    ],
)
