load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "flask_server",
    srcs = ["flask_server.py"],
    visibility = ["//:__subpackages__"],
    data = ["//data"],
    deps = [
        "//db",
        "//db/sqlite",
        "@pip//absl_py",
        "@pip//flask",
    ],
)

py_library(
    name = "server",
    srcs = ["flask_server.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//db",
        "//db/sqlite",
        "@pip//absl_py",
        "@pip//flask",
    ],
)
