load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "postgres_driver",
    srcs = ["postgres_driver.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//db/postgres/models",
        "@pip//sqlalchemy",
    ],
)

py_library(
    name = "postgres",
    srcs = ["postgres_driver.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//db/postgres/models",
        "@pip//sqlalchemy",
    ],
)
